修复SCDN集成测试Java8兼容性